[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/TextLabel.gd" type="Script" id=1]
[ext_resource path="res://scenes/GameBoard.gd" type="Script" id=2]
[ext_resource path="res://scenes/Board.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/DiceUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/Vangers.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_color = Color( 0.772549, 0.188235, 0, 1 )
use_filter = true
font_data = ExtResource( 5 )

[node name="GameBoard" type="Node2D"]
script = ExtResource( 2 )

[node name="Board" parent="." instance=ExtResource( 3 )]

[node name="TextLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 132.0
margin_top = 561.0
margin_right = 753.0
margin_bottom = 714.0
custom_colors/font_color = Color( 1, 0.623529, 0.423529, 1 )
custom_fonts/font = SubResource( 1 )
text = "Cum make ma fearless"
align = 1
valign = 1
script = ExtResource( 1 )

[node name="DiceWhite" parent="." instance=ExtResource( 4 )]
position = Vector2( 657, 370 )

[node name="DiceBlack" parent="." instance=ExtResource( 4 )]
position = Vector2( 224, 370 )

[connection signal="rolled" from="DiceWhite" to="." method="_on_Dice_rolled"]
[connection signal="rolled" from="DiceBlack" to="." method="_on_Dice_rolled"]
